/*
 * AItutor - Backend Application
 * Spring Boot 4.0 + Java 21 + Spring AI 2.0 + PostgreSQL + pgvector + MinIO + Redis
 */

plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
}

group = 'edu.aitutor'
version = '0.0.1-SNAPSHOT'

repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven { url 'https://maven.aliyun.com/repository/spring/' }
    maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    // Spring Boot Starters (Boot 4.0 modular design)
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // Spring AI 2.0 - OpenAI兼容模式 (阿里云DashScope)
    implementation "org.springframework.ai:spring-ai-starter-model-openai:${libs.versions.spring.ai.get()}"
    // Spring AI 2.0 - PostgreSQL Vector Store (pgvector)
    implementation "org.springframework.ai:spring-ai-starter-vector-store-pgvector:${libs.versions.spring.ai.get()}"

    // Apache Tika for document parsing (PDF, DOCX, TXT)
    implementation libs.tika.core
    implementation libs.tika.parsers

    // AWS S3 SDK for RustFS storage
    implementation "software.amazon.awssdk:s3:${libs.versions.aws.sdk.get()}"

    // Redisson 4.0 - Redis客户端 (Boot 4.0 compatible)
    implementation "org.redisson:redisson-spring-boot-starter:${libs.versions.redisson.get()}"

    // PDF导出 - iText 8
    implementation "com.itextpdf:itext-core:${libs.versions.itext.get()}"
    implementation "com.itextpdf:font-asian:${libs.versions.itext.get()}"

    // Lombok
    compileOnly libs.lombok
    annotationProcessor libs.lombok

    // MapStruct - 对象映射 (必须在Lombok之后配置)
    implementation "org.mapstruct:mapstruct:${libs.versions.mapstruct.get()}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${libs.versions.mapstruct.get()}"
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

// 自动加载根目录 .env 文件环境变量到 bootRun 任务
// 方便本地开发时自动读取 AI_BAILIAN_API_KEY 等配置
tasks.named('bootRun') {
    def envFile = rootProject.file('.env')
    if (envFile.exists()) {
        envFile.readLines().each { line ->
            // 忽略空行和注释行
            if (line.trim() && !line.startsWith('#')) {
                def parts = line.split('=', 2)
                if (parts.length == 2) {
                    def key = parts[0].trim()
                    def value = parts[1].trim()
                    // 移除可能存在的引号
                    if (value.startsWith('"') && value.endsWith('"')) {
                        value = value.substring(1, value.length() - 1)
                    } else if (value.startsWith("'") && value.endsWith("'")) {
                        value = value.substring(1, value.length() - 1)
                    }
                    environment key, value
                }
            }
        }
    }
}
